// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete should render a fully wired-up autocomplete component 1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper hods-multi-select-autocomplete"
>
  <div
    className=" css-2b097c-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <div
      className="hods-multi-select-autocomplete__control css-e56m7-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="hods-multi-select-autocomplete__value-container css-g1d714-ValueContainer"
      >
        <div
          className="hods-multi-select-autocomplete__placeholder css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="hods-multi-select-autocomplete__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-3-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="hods-multi-select-autocomplete__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete should render an autocomplete component in multi select mode with preselected value of alpha 1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper hods-multi-select-autocomplete"
>
  <div
    className=" css-2b097c-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <div
      className="hods-multi-select-autocomplete__control css-e56m7-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="hods-multi-select-autocomplete__value-container hods-multi-select-autocomplete__value-container--has-value css-g1d714-ValueContainer"
      >
        <div
          className="hods-multi-select-autocomplete__single-value css-1uccc91-singleValue"
        >
          alpha
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="hods-multi-select-autocomplete__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-8-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="hods-multi-select-autocomplete__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete should render an autocomplete component in multi select mode with preselected values of alpha, bravo  1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper hods-multi-select-autocomplete"
>
  <div
    className=" css-2b097c-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <div
      className="hods-multi-select-autocomplete__control css-e56m7-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="hods-multi-select-autocomplete__value-container hods-multi-select-autocomplete__value-container--has-value css-g1d714-ValueContainer"
      >
        <div
          className="hods-multi-select-autocomplete__single-value css-1uccc91-singleValue"
        >
          alpha
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="hods-multi-select-autocomplete__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-9-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="hods-multi-select-autocomplete__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete should render an autocomplete component with a preselected value of "alpha" 1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper hods-multi-select-autocomplete"
>
  <div
    className=" css-2b097c-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <div
      className="hods-multi-select-autocomplete__control css-e56m7-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="hods-multi-select-autocomplete__value-container hods-multi-select-autocomplete__value-container--has-value css-g1d714-ValueContainer"
      >
        <div
          className="hods-multi-select-autocomplete__single-value css-1uccc91-singleValue"
        >
          alpha
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="hods-multi-select-autocomplete__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-6-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="hods-multi-select-autocomplete__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete should render an autocomplete component with a preselected value of "bravo" 1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper hods-multi-select-autocomplete"
>
  <div
    className=" css-2b097c-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <div
      className="hods-multi-select-autocomplete__control css-e56m7-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="hods-multi-select-autocomplete__value-container hods-multi-select-autocomplete__value-container--has-value css-g1d714-ValueContainer"
      >
        <div
          className="hods-multi-select-autocomplete__single-value css-1uccc91-singleValue"
        >
          bravo
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="hods-multi-select-autocomplete__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-7-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="hods-multi-select-autocomplete__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete should render an autocomplete component with an error control 1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper error"
>
  <div
    className=" css-2b097c-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <div
      className="error__control css-e56m7-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="error__value-container error__value-container--has-value css-g1d714-ValueContainer"
      >
        <div
          className="error__single-value css-1uccc91-singleValue"
        >
          alpha
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="error__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-5-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="error__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete should render an input with disabled flag set and the error flag set 1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper hods-multi-select-autocomplete error"
>
  <div
    className="hods-multi-select-autocomplete error--is-disabled css-14jk2my-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <div
      className="hods-multi-select-autocomplete error__control hods-multi-select-autocomplete error__control--is-disabled css-g8u311-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="hods-multi-select-autocomplete error__value-container css-g1d714-ValueContainer"
      >
        <div
          className="hods-multi-select-autocomplete error__placeholder css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="hods-multi-select-autocomplete error__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={true}
              id="react-select-4-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="hods-multi-select-autocomplete error__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete should render when disabled flag is set 1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper "
>
  <div
    className=" css-14jk2my-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <div
      className=" css-g8u311-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-g1d714-ValueContainer"
      >
        <div
          className=" css-107lb6w-singleValue"
        >
          alpha
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className=""
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={true}
              id="react-select-2-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelectAutocomplete should render a fully wired-up autocomplete component 1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper hods-multi-select-autocomplete"
>
  <div
    className=" css-2b097c-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <div
      className="hods-multi-select-autocomplete__control css-e56m7-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="hods-multi-select-autocomplete__value-container css-g1d714-ValueContainer"
      >
        <div
          className="hods-multi-select-autocomplete__placeholder css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="hods-multi-select-autocomplete__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-3-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="hods-multi-select-autocomplete__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelectAutocomplete should render an autocomplete component in multi select mode with preselected value of alpha 1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper hods-multi-select-autocomplete"
>
  <div
    className=" css-2b097c-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <div
      className="hods-multi-select-autocomplete__control css-e56m7-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="hods-multi-select-autocomplete__value-container hods-multi-select-autocomplete__value-container--has-value css-g1d714-ValueContainer"
      >
        <div
          className="hods-multi-select-autocomplete__single-value css-1uccc91-singleValue"
        >
          alpha
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="hods-multi-select-autocomplete__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-8-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="hods-multi-select-autocomplete__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelectAutocomplete should render an autocomplete component in multi select mode with preselected values of alpha, bravo  1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper hods-multi-select-autocomplete"
>
  <div
    className=" css-2b097c-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <div
      className="hods-multi-select-autocomplete__control css-e56m7-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="hods-multi-select-autocomplete__value-container hods-multi-select-autocomplete__value-container--has-value css-g1d714-ValueContainer"
      >
        <div
          className="hods-multi-select-autocomplete__single-value css-1uccc91-singleValue"
        >
          alpha
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="hods-multi-select-autocomplete__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-9-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="hods-multi-select-autocomplete__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelectAutocomplete should render an autocomplete component with a preselected value of "alpha" 1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper hods-multi-select-autocomplete"
>
  <div
    className=" css-2b097c-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <div
      className="hods-multi-select-autocomplete__control css-e56m7-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="hods-multi-select-autocomplete__value-container hods-multi-select-autocomplete__value-container--has-value css-g1d714-ValueContainer"
      >
        <div
          className="hods-multi-select-autocomplete__single-value css-1uccc91-singleValue"
        >
          alpha
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="hods-multi-select-autocomplete__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-6-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="hods-multi-select-autocomplete__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelectAutocomplete should render an autocomplete component with a preselected value of "bravo" 1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper hods-multi-select-autocomplete"
>
  <div
    className=" css-2b097c-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <div
      className="hods-multi-select-autocomplete__control css-e56m7-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="hods-multi-select-autocomplete__value-container hods-multi-select-autocomplete__value-container--has-value css-g1d714-ValueContainer"
      >
        <div
          className="hods-multi-select-autocomplete__single-value css-1uccc91-singleValue"
        >
          bravo
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="hods-multi-select-autocomplete__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-7-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="hods-multi-select-autocomplete__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelectAutocomplete should render an autocomplete component with an error control 1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper error"
>
  <div
    className=" css-2b097c-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <div
      className="error__control css-e56m7-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="error__value-container error__value-container--has-value css-g1d714-ValueContainer"
      >
        <div
          className="error__single-value css-1uccc91-singleValue"
        >
          alpha
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="error__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-5-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="error__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelectAutocomplete should render an input with disabled flag set and the error flag set 1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper hods-multi-select-autocomplete error"
>
  <div
    className="hods-multi-select-autocomplete error--is-disabled css-14jk2my-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <div
      className="hods-multi-select-autocomplete error__control hods-multi-select-autocomplete error__control--is-disabled css-g8u311-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="hods-multi-select-autocomplete error__value-container css-g1d714-ValueContainer"
      >
        <div
          className="hods-multi-select-autocomplete error__placeholder css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="hods-multi-select-autocomplete error__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={true}
              id="react-select-4-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="hods-multi-select-autocomplete error__indicators css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelectAutocomplete should render when disabled flag is set 1`] = `
<div
  className="hods-multi-select-autocomplete__outer-wrapper "
>
  <div
    className=" css-14jk2my-container"
    id="autocompleteId"
    onKeyDown={[Function]}
  >
    <div
      className=" css-g8u311-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-g1d714-ValueContainer"
      >
        <div
          className=" css-107lb6w-singleValue"
        >
          alpha
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className=""
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={true}
              id="react-select-2-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      />
    </div>
  </div>
</div>
`;
